[package]
name = "mdbook-emoji"
version = "0.2.1"
authors = ["Jon Richter <jon@allmende.io>"]
edition = "2021"
keywords = ["mdbook", "markdown", "emoji"]
license = "MPL-2.0"
readme = "README.md"
description = """mdBook preprocessor that replaces colon-separated emoji short \
codes with Unicode code points, except within code blocks or code spans."""
repository = "https://github.com/almereyda/mdbook-emoji"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
emojis = "0.4.0"
mdbook = { version = "0.4.21", default-features = false }
pulldown-cmark = "0.9.2"
pulldown-cmark-to-cmark = "10.0.4"
regex = "1"
semver = "1.0.4"
serde_json = "1.0.66"
structopt = "0.3.22"
